Revert "fix overflow issues on Safari"
This reverts commit 39d1f4bca564da2d5c33707e9eb54b3d7eaf9293.

--- a/styles/global.css
+++ b/styles/global.css
@@ -9,11 +9,8 @@
   font-style: normal;
 }
 
-html,
-body,
-.__r_e_m_i_x {
+body {
   overflow-x: hidden;
-  position: relative;
 }
 
 details summary {
